--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
 <html>
-<title>Placeholder</title>
-<body>
-Placeholder
-</body>
+<meta http-equiv="refresh" content="0;URL='https://www.linkedin.com/in/devesh-logendran/'"/>
 </html>
